deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cms-auth
  labels:
    app: "cms-auth"
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  selector:
    app: cms-auth
---
apiVersion: v1
kind: Service
metadata:
  name: cms
  labels:
    app: "cms"
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: cms
